[package]
name = "guessing-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# In the Cargo.toml file, everything that follows a header is part of that section that continues until another section starts.
[dependencies]
prettier = "0.1.5"
# specifier 0.8.5 is actually shorthand for ^0.8.5, which means any version that is at least 0.8.5 but below 0.9.0
rand = "0.8.5"
